--- a/views/question.ejs
+++ b/views/question.ejs
@@ -32,7 +32,22 @@
 	          <a href="/login" class="btn btn-secondary my-2 my-sm-0">Login</a>
 	        </form>
 	      </div>
-	  </div>
-	</div>
+			</div>
+		</div>
+		<div class="container">
+			<div class="container col-md-6 col-md-offset-3">
+				<% for(var i=0; i<10; i++) { %>
+					<div class="card row-margin-top">
+						<div class="card-body">
+							<h5 class="card-title">問題標題</h5>
+							<p class="card-text"><% for(var j=0; j<30; j++) { %>ㄦ<% } %>...</p>
+							<img src="./images/like.png" />
+							<img src="./images/dislike.png" />
+							<a href="#" class="btn btn-primary btn-sm pull-right">點我看更多</a>
+						</div>
+					</div>
+				<% } %>
+			</div>
+		</div>
   </body>
 </html>
