Update question page UI

--- a/views/question.ejs
+++ b/views/question.ejs
@@ -35,7 +35,7 @@
 			</div>
 		</div>
 		<div class="container">
-			<div class="container col-md-6 col-md-offset-3">
+			<div class="container col-md-10 col-md-offset-1">
 				<div class="d-flex">
 					<a href="/ask" class="btn btn-outline-secondary">發問</a>
 					<form class="form-inline ml-auto" action="/question" method="post">
@@ -47,11 +47,12 @@
 					<div class="card row-margin-top">
 						<div class="card-body">
 							<h3 class="card-title">問題標題</h3>
-							<p class="card-text"><% for(var j=0; j<30; j++) { %>ㄦ<% } %>...</p>
+							<p class="card-text"><% for(var j=0; j<50; j++) { %>ㄦ<% } %>...</p>
 							<div class="d-flex">
 								<div>
 									<img src="./images/like.png" /> 123
 									<img src="./images/dislike.png" /> 456
+									<img src="./images/message.png"> 8
 								</div>
 									<a href="#" class="btn btn-primary btn-sm ml-auto">點我看更多</a>
 								</div>
