--- a/views/ask.ejs
+++ b/views/ask.ejs
@@ -18,13 +18,13 @@
           <li class="nav-item">
             <a class="nav-link" href="/">Home</a>
           </li>
-          <li class="nav-item active">
+          <li class="nav-item">
             <a class="nav-link" href="share">Share</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="search">Search</a>
           </li>
-          <li class="nav-item">
+          <li class="nav-item active">
             <a class="nav-link" href="question">Question</a>
           </li>
         </ul>
@@ -50,5 +50,6 @@
         </form>
     </div>
   </div>
+  <%- include footer.ejs %>
   </body>
 </html>
