--- a/views/register.ejs
+++ b/views/register.ejs
@@ -50,7 +50,10 @@
 	            <p>Please create a password between 8 - 20 characters and contains English character and number.</p>
 	            <div class="form-group has-warning">
 	                <input type="password" class="form-control" name="confirm" placeholder="Confirm your password">
-	            </div>
+							</div>
+							<div class="form-group has-warning">
+									<input type="text" class="form-control" name="nickname" placeholder="Nick name">
+							</div>
 	            <div class="form-group has-warning">
 								<select name="department" class="custom-select">
 									<% for(let i=0; i<department.length; i++) { %>
