--- a/views/register.ejs
+++ b/views/register.ejs
@@ -40,22 +40,22 @@
 	        	<legend>Sign Up</legend>
 	            <div class="form-group has-error">
 	                <div class="input-group mb-3">
-		            	<input type="text" class="form-control" name="email" placeholder="Email address">
+		            	<input type="text" class="form-control" name="email" placeholder=" Email address">
 		                <span class="input-group-text" id="basic-addon2">@student.nsysu.edu.tw</span>	                	
 	                </div>
 	            </div>
 	            <div class="form-group has-warning">
-	                <input type="password" class="form-control" name="password" placeholder="Password">
+	                <input type="password" class="form-control" name="password" placeholder=" Password">
 	            </div>
 	            <p>Please create a password between 8 - 20 characters and contains English character and number.</p>
 	            <div class="form-group has-warning">
-	                <input type="password" class="form-control" name="confirm" placeholder="Confirm your password">
+	                <input type="password" class="form-control" name="confirm" placeholder=" Confirm your password">
 							</div>
 							<div class="form-group has-warning">
-									<input type="text" class="form-control" name="nickname" placeholder="Nick name">
+									<input type="text" class="form-control" name="nickname" placeholder=" Nickname">
 							</div>
 	            <div class="form-group has-warning">
-								<select name="department" class="custom-select">
+								<select name="department" class="form-control">
 									<% for(let i=0; i<department.length; i++) { %>
 									<option value='<%= department[i] %>'><%= department[i] %></option>
 									<% } %>
