--- a/views/register.ejs
+++ b/views/register.ejs
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title><%= title %></title>
+		<title><%= title %></title>
+		<link rel="icon" href="/images/favicon.png">
     <link rel='stylesheet' href='/stylesheets/bootstrap.min.css' />
     <link rel="stylesheet" href="/stylesheets/custom.min.css" />
     <script src="./javascripts/navbar.js"></script>
