--- a/views/share.ejs
+++ b/views/share.ejs
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title><%= title %></title>
+    <link rel="icon" href="/images/favicon.png">
     <link rel='stylesheet' href='/stylesheets/bootstrap.min.css' />
     <link rel="stylesheet" href="/stylesheets/custom.min.css" />
     <script src="./javascripts/navbar.js"></script>
