Update ask page place holder text

--- a/views/ask.ejs
+++ b/views/ask.ejs
@@ -40,10 +40,10 @@
         <form action="/ask" method="post">
             <legend>Ask Question</legend>
             <div class="form-group row">
-                <input type="text" name="title" placeholder="TITLE" class="form-control">
+                <input type="text" name="title" placeholder="TITLE (less than 30 words)" class="form-control">
             </div>
             <div class="form-group row">
-                <textarea class="form-control" id="exampleFormControlTextarea1" rows="25" style="resize: none;"></textarea>
+                <textarea class="form-control" id="exampleFormControlTextarea1" rows="25" style="resize: none;" placeholder="Content (more than 10 words)"></textarea>
             </div>
             <div class="form-group row">
                 <button type="submit" class="btn btn-outline-primary col-sm-12">Ask Your Question</button>
