Choice post identity

--- a/views/ask.ejs
+++ b/views/ask.ejs
@@ -40,6 +40,14 @@
         <form action="/ask" method="post">
             <legend>Ask Question</legend>
             <div class="form-group row">
+              <select name="" class="form-control">
+                <option value="">發文身份</option>
+                <option value="">系所</option>
+                <option value="">暱稱</option>
+                <option value="">匿名</option>
+              </select>
+            </div>
+            <div class="form-group row">
                 <input type="text" name="title" placeholder="TITLE (less than 30 words)" class="form-control">
             </div>
             <div class="form-group row">
