Add value and name

--- a/views/ask.ejs
+++ b/views/ask.ejs
@@ -40,11 +40,11 @@
         <form action="/ask" method="post">
             <legend>Ask Question</legend>
             <div class="form-group row">
-              <select name="" class="form-control">
-                <option value="">發文身份</option>
-                <option value="">系所</option>
-                <option value="">暱稱</option>
-                <option value="">匿名</option>
+              <select name="identity" class="form-control">
+                <option value="-">發文身份</option>
+                <option value="department">系所</option>
+                <option value="nickname">暱稱</option>
+                <option value="anonymous">匿名</option>
               </select>
             </div>
             <div class="form-group row">
