--- a/views/register.ejs
+++ b/views/register.ejs
@@ -8,33 +8,7 @@
     <script src="./javascripts/navbar.js"></script>
   </head>
   <body>
-  	<div class="navbar navbar-expand-lg fixed-top navbar-dark bg-dark">
-	    <div class="container">
-	      <a class="navbar-brand" href="/"><%= title %></a>
-	      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-	        <span class="navbar-toggler-icon"></span>
-	      </button>
-	      <div class="collapse navbar-collapse" id="navbarResponsive">
-	        <ul class="navbar-nav mr-auto">
-	          <li class="nav-item active">
-	            <a class="nav-link" href="/">Home</a>
-	          </li>
-	          <li class="nav-item">
-	            <a class="nav-link" href="share">Share</a>
-	          </li>
-	          <li class="nav-item">
-	            <a class="nav-link" href="search">Search</a>
-	          </li>
-	          <li class="nav-item">
-	            <a class="nav-link" href="question">Question</a>
-	          </li>
-	        </ul>
-	        <form class="form-inline my-2 my-lg-0">
-	          <a href="/login" class="btn btn-secondary my-2 my-sm-0">Login</a>
-	        </form>
-	      </div>
-	    </div>
-	</div>
+	<%- include('navbar.ejs', {active: ''}) %>
 	<div class="container">
 	    <div class="container col-md-6 col-md-offset-2">	
 	        <form method="post" action="/register">
