--- a/views/navbar.ejs
+++ b/views/navbar.ejs
@@ -1,3 +1,15 @@
+<script>
+    window.onload = () => {
+        if (localStorage['x-access-token']) {
+            token = localStorage['x-access-token'];
+            document.getElementsByTagName('form')[0].innerHTML = `
+                <a href="/profile" class="btn btn-secondary my-2 my-sm-0">Profile</a>
+                <a href="/logout" class="btn btn-primary my-2 my-sm-0">Logout</a>`;
+        } else {
+            document.getElementsByTagName('form')[0].innerHTML = '<a href="/login" class="btn btn-secondary my-2 my-sm-0">Login</a>';
+        }
+    }
+</script>
 <div class="navbar navbar-expand-lg fixed-top navbar-dark bg-dark">
     <div class="container">
         <a class="navbar-brand" href="/"><%= title %></a>
@@ -6,21 +18,21 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav mr-auto">
-            <li class="nav-item <% if (active=='index') { %> active <% } %>">
+            <li class="nav-item <% if (active == 'index') { %> active <% } %>">
             <a class="nav-link" href="/">Home</a>
             </li>
-            <li class="nav-item <% if (active=='share') { %> active <% } %>">
+            <li class="nav-item <% if (active == 'share') { %> active <% } %>">
             <a class="nav-link" href="share">Share</a>
             </li>
-            <li class="nav-item <% if (active=='search') { %> active <% } %>">
+            <li class="nav-item <% if (active == 'search') { %> active <% } %>">
             <a class="nav-link" href="search">Search</a>
             </li>
-            <li class="nav-item <% if (active=='question') { %> active <% } %>">
+            <li class="nav-item <% if (active == 'question') { %> active <% } %>">
             <a class="nav-link" href="question">Question</a>
             </li>
-                </ul>
-        <form class="form-inline my-2 my-lg-0" id="user">
-            <a href="/login" class="btn btn-secondary my-2 my-sm-0">Login</a>
+        </ul>
+        <form class="form-inline my-2 my-lg-0">
+
         </form>
         </div>
     </div>
