Use cookie set token

--- a/views/navbar.ejs
+++ b/views/navbar.ejs
@@ -4,7 +4,7 @@
         if (localStorage['x-access-token']) {
             token = localStorage['x-access-token'];
             document.getElementsByTagName('form')[0].innerHTML = `
-                <a href="/profile?token=` + token +`" class="btn btn-secondary my-2 my-sm-0">Profile</a>
+                <a href="/profile" class="btn btn-secondary my-2 my-sm-0">Profile</a>
                 <input type="button" class="btn btn-primary my-2 my-sm-0" onclick='logout()' value="Logout">`
         } else {
             document.getElementsByTagName('form')[0].innerHTML = '<a href="/login" class="btn btn-secondary my-2 my-sm-0">Login</a>';
@@ -12,10 +12,9 @@
     }
     var logout = () => {
         $.ajax({
-            url: '/logout?token=' + token,
+            url: '/logout',
             method: 'get',
             success: function(data) {
-                localStorage.removeItem('x-access-token');
                 token = null;
                 if (data.status == 403) {
                     alert('使用者狀態錯誤');
@@ -26,7 +25,6 @@
                 }
                 location.href = '/';
             }, error: function(err) {
-                localStorage.removeItem('x-access-token');
                 token = null;
                 location.href = '/';
             }
