Fix lose name content on ask page

--- a/views/ask.ejs
+++ b/views/ask.ejs
@@ -25,7 +25,7 @@
                 <input type="text" name="title" placeholder="TITLE (less than 30 words)" class="form-control">
             </div>
             <div class="form-group row">
-                <textarea class="form-control" id="exampleFormControlTextarea1" rows="25" style="resize: none;" placeholder="Content (more than 10 words)"></textarea>
+                <textarea class="form-control" name="content" id="exampleFormControlTextarea1" rows="25" style="resize: none;" placeholder="Content (more than 10 words)"></textarea>
             </div>
             <div class="form-group row">
                 <button type="submit" class="btn btn-outline-primary col-sm-12">Ask Your Question</button>
