--- a/views/question.ejs
+++ b/views/question.ejs
@@ -11,29 +11,34 @@
 		<%- include('navbar.ejs', {active: 'question'}) %>
 		<div class="container">
 			<div class="container col-md-10 col-md-offset-1">
+				<% if (typeof error != 'undefined') { %>
+				<h1 class="text-danger text-center"><%= error %></h1>
+				<% } else { %>
 				<div class="d-flex">
 					<a href="/ask" class="btn btn-outline-secondary">發問</a>
-					<form class="form-inline ml-auto" action="/question" method="post">
-						<input class="form-control mr-sm-2" type="text" placeholder="Search">
+					<form class="form-inline ml-auto" action="/question" method="get">
+						<input name="title" class="form-control mr-sm-2" type="text" placeholder="Search">
 						<button class="btn btn-outline-primary" type="submit">Search</button>
 					</form>
 				</div>
-				<% for(var i=0; i<10; i++) { %>
+				<% if (data.length == 0) { %>
+				<h5 class="text-danger text-center">目前沒有相關問題 QwQ</h5>
+				<% } %>
+				<% for(var i=0; i<data.length; i++) { %>
 					<div class="card row-margin-top">
 						<div class="card-body">
-							<h3 class="card-title">問題標題</h3>
-							<p class="card-text"><% for(var j=0; j<50; j++) { %>ㄦ<% } %>...</p>
+							<h3 class="card-title"><%= data[i].title %></h3>
+							<p class="card-text"><%= data[i].content.slice(0, 50) + (data[i].content.length >= 50 ? '...' : '') %></p>
 							<div class="d-flex">
 								<div>
-									<img src="./images/like.png" /> 123
-									<img src="./images/dislike.png" /> 456
-									<img src="./images/message.png"> 8
+									<img src="./images/like.png" /> <%= data[i].like %>
+									<img src="./images/dislike.png" /> <%= data[i].dislike %>
 								</div>
 									<a href="#" class="btn btn-primary btn-sm ml-auto">點我看更多</a>
 								</div>
 						</div>
 					</div>
-				<% } %>
+				<% } } %>
 			</div>
 		</div>
 		<%- include footer.ejs %>
