--- a/views/search.ejs
+++ b/views/search.ejs
@@ -10,6 +10,9 @@
   <body>
   <%- include('navbar.ejs', {active: 'search'}) %>
   <div class="container">
+    <% if (typeof error != 'undefined') { %>
+    <h1 class="text-danger text-center"><%= error %></h1>
+    <% } else { %>
     <form action="searchClass" method="get">
       <legend>Search class</legend>
       <div class="form-group row">
@@ -51,10 +54,6 @@
       </div>
     </form>
 
-    <% if (typeof error != 'undefined') { %>
-    <h1 class="text-danger text-center"><%= error %></h1>
-    <% } %>
-
     <% if (typeof searchData != 'undefined') { %>
       <div class="row">
         <% for(var i=0; i<searchData.length; i++) { %>
@@ -90,7 +89,7 @@
           </div>
         <% } %>
       </div>
-    <% } %>
+    <% } } %>
   </div>
 
   <%- include footer.ejs %>
